# ta2-extraction

./: .dockerignore  .gitignore  ALL_commodities_extraction.ipynb  Deposit classification Scheme.xlsx  Dockerfile  LICENSE  README.md  USGS_Tungsten_ver2_Merged_Excel.xlsx  add_crs.ipynb  commodities_extraction.ipynb  config.ini  create_pdf.ipynb  download_files.ipynb  download_files.py  extract_commodities.ipynb  extract_commodities_demo.py  extract_filenames.ipynb  extract_functions.py  parallel_extract_run.py  parallel_extraction.ipynb  pyproject.toml  requirements.txt  run.py  runPipeline.py  settings.py  ta2_extraction_assistants.ipynb  testing.ipynb
.ipynb_checkpoints/: create_pdf-checkpoint.ipynb  extract_commodities-checkpoint.ipynb  prompts-checkpoint.py  settings-checkpoint.py  ta2_extraction_assistants-checkpoint.ipynb
codes/: country.csv  minmod_units.csv
expert_notes/: Hackathon Ground Truth_new (Responses) - Form Responses 1.csv  NI_43_101_Nickel_v0b.csv
extract_venv/: pyvenv.cfg
extracted/: Bleiberg Pb Zn 5-2017_summary_1700598433.json  Cantung W 1-2011.json  Empire State Zn 5-2018 PEA_summary_1700438440.json  Empire State Zn 9-2017_summary_1700504336.json  Florida Canyon Au 11-2018_summary_1700599311.json  Fox W 4-2016.json  Greens Creek Au Ag Pb Zn 12-2018_summary_1700504817.json  Greens Creek Au Ag Pb Zn 12-2018_summary_1700512866.json  Greens Creek Pb Zn Ag 3-2013 OM_summary_1700506297.json  Mount Pleasant W Mo Bi 9-2012.json  Red Dog Zn 5-2001_summary_1700509454.json  Red Dog Zn Pb Ag 2-2017 OM_summary_1700509937.json  Risby W 9-2007.json
(+475 files in other folders)
