[tool.poetry]
name = "ta2_extraction"
version = "3.0.0"
description = "This is the package being used for connection to the cdr"
authors = ["Adriana Trejo-Sheu <Atrejosheu@inferlink.com>"]
packages = [{include = "extraction_package"}, { include = "first_pass" }, { include = "config.ini" }, { include = "settings.py" }]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
